--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
+  "parcel-plugin-static": {
+    "source": "src/sounds",
+    "destination": "sounds"
+  },
   "dependencies": {
     "@gltf-transform/core": "^0.7.4",
     "@gltf-transform/lib": "^0.7.4",
@@ -26,6 +30,7 @@
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-glsl": "^0.1.0",
     "parcel-plugin-json-url-loader": "^0.1.2",
+    "parcel-plugin-static": "^1.0.0",
     "parcel-plugin-static-files-copy": "^2.5.0"
   }
 }
